# UofC-CPSC-441-Winter-2022

./: CMakeLists.txt  README.md
Assignment0/: Information.webarchive  Palindrome-Testing.cpp
Assignment1/: Clown-Proxy.cpp  Information.webarchive  README.md
Assignment2/: Information.webarchive  README.md  Vowelizer-Client.cpp  Vowelizer-Server.cpp
Assignment3/: Information.webarchive  README.md  Router-Buffering.cpp
Assignment4/: Information.webarchive  Jumping-Bozons.cpp  README.md
